<resources>
    <string name="BANNER">ca-app-pub-8377806524744957/2404800783</string>
    <string name="admob">ca-app-pub-8377806524744957~3684424569</string>
    <string name="app_name">Ubicate UBB</string>
    <string name="title_activity_mapa_universidad">Map</string>
    <string name="RememberThat">Recuerda que:Debes tener activado el GPS y estar conectado a internet wifi-ubb:conocimiento2011 Wifi-Bibliotecas:Red-Bibliotecas</string>
    <string name="CreateMarker">Recuerda que para crear un marcador debes un momento presionar en el mapa y además, debes completar
    los campos que son necesarios para crear un marcador.</string>
    <string name="UpdateMarker">Recuerda que para modificar un marcador debes ingresar el título de éste, que es la clave primaria
    y esperar a recibir la información del marcador si es que existe.</string>
    <string name="DeleteMarker">Recuerda que debes ingresar el título del marcador y posteriormente confirmar si es que deseas
    eliminar un marcador.</string>
    <string name="user">RUT</string>
    <string name="password">Contraseña</string>
    <string name="enter">Ingresar</string>
    <string name="title_activity_functions_to_administer">FunctionsToAdminister</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_marker">Map</string>
    <string name="returnn">Volver</string>
    <string name="AdminCentral">Administración Central</string>
    <string name="AulaA">Aulas A</string>
    <string name="Guardias">Cabina De Vigilancia De La Universidad Del Bío-Bío</string>
    <string name="DepartamentoCienciasBasicas">Departamento De Ciencias Básicas</string>
    <string name="DDE">Dirección de Desarrollo Estudiantil</string>
    <string name="GYMMultitaller">Gimnasio MultiTaller</string>
    <string name="CasaCentralInfo2">Además, la Administración Central cuenta con las siguientes áreas y funciones importantes:\u000A\u000A* Dirección De Postgrado.\u000A* Departamento De Pregrado Chillán.\u000A* Unidad De Gestión Curricular Y Monitoreo.\u000A* Unidad De Formación Integral Para Tutores(Sala UFI).\u000A* Admisión Y Registro Académico.
\u000A* Dirección De Administración Y Presupuesto.\u000A* Departamento De Personal.\u000A* Departamento De Servicios Tecnológicos (DST), encargados de administrar los recursos de redes, software,
        datos, hardware y telefónicos de la Universidad.\u000A* Subdirección De Investigación.
    \u000A* Cajero Automático.\u000A* Petición Para Certificado De Alumno Regular.\u000A* Cobranzas Para Cancelar La Matrícula.</string>
    <string name="CasaCentralInfo1">La Casa Central realiza las siguientes actividades.\u000A \u000A
        * Administrar el proceso de admisión y matrícula a las carreras y programas de pregrado regular pertenecientes a la Universidad del Bío-Bío.\u000A \u000A
    * Registrar, controlar y almacenar la información académica del estudiante y de las mallas curriculares de todas las carreras de pregrado, programas de postgrado, diplomados y postítulos, impartidos por la Universidad, velando por el fiel cumplimiento de la reglamentación legal vigente.\u000A \u000A
    * Certificar la trayectoria académica de todos los estudiantes de la Universidad del Bío-Bío.\u000A \u000A
    * Generar y validar estadísticas académicas en su ámbito de acción, según requerimientos internos y externos a la institución para análisis y toma de decisiones.\u000A\u000A
    * Inscripción para las asignaturas de formacines integrales.</string>
    <string name="FotocopiaPrecios">* Fotocopia, impresión, reducción: 20 pesos.\u000A\u000A* Anillados: 1-40 hojas a 400 pesos.\u000A41-60 hojas a
    500 pesos.\u000A61-80 hojas a 600 pesos.\u000A81-100 hojas a 800 pesos.\u000A101-150 hojas a 1000 pesos.\u000A151-200
    hojas a 1300 pesos.\u000A201+ a 2000 pesos.\u000A\u000A* Horarios: lunes a viernes de 08:30 a 12:30 hrs. y de 14:00 a 18:50 hrs.</string>
    <string name="InfoGuardias">Los Guardias de la Cabina De Seguridad ubicada en la entrada de la Universidad del Bío-Bío, realizan
        las siguientes funciones:\u000A\u000A* Vigilancia perimetral completa de la Universidad.\u000A\u000A* Control de acceso.\u000A\u000A* Revisión
        de camaras.\u000A\u000A* Realizan turnos de 12 horas, vigilando la Universidad en todo momento.\u000A\u000A* Encendido y apagado de luces.\u000A\u000A* Activación
        y desactivación de alarmas.\u000A\u000A* Entrega de llaves para la Federación de estudiantes, solo a los
        presidentes de su carrera.</string>
    <string name="InfoDepCienciasBasicas">El Departamento de Ciencias Básicas forma parte de la Facultad De Ciencias de la Universidad
    del Bío-Bío. Sus acciones vinculan la docencia, extensión e investigación al más alto nivel.\u000A\u000AEl edificio
    cuenta con 4 pisos, los cuales están compuestos por laboratorios, oficinas para docentes y la cafetería. A continuación
    se menciona como están distribuidas las instalaciones por cada piso.</string>
    <string name="Piso1">* Cafetería.\u000A\u000A* Baños.\u000A\u000A* Laboratorio De Fitoquímica Ecológica.\u000A\u000A* Laboratorio De
    Nutrición Aplicada.\u000A\u000A* Laboratorio De Química I.\u000A\u000A* Laboratorio De Química II.\u000A\u000A* Laboratorio
    De Ecológica Y Evolución/Grupo De Biodiversidad Y Cambio Global (Dra Marcela Vidal).\u000A\u000A* Laboratorio De Toxicología De Alimentos (Dr. José Miguel Bastías).\u000A\u000A* Laboratorio
    De Biología.\u000A\u000A* Laboratorio De Ecofisiología Vegetal.\u000A\u000A* Laboratorio De Síntesis De Productos Naturales (Dr. Julio Alarcón).\u000A\u000A* Laboratorio
    De Microestructura Y Modelación De Materiales Morosos.\u000A\u000A* Laboratorio De Microalgas (Ph.D Patricia Arancibia).\u000A\u000A* Laboratorio
    De Fotoquímica Inorgánica (Gerardo Cabello y Luis Lillo).\u000A\u000A* Laboratorio De Genética Toxicológica.</string>
    <string name="Piso2">* Baños.\u000A\u000A* Laboratorio De Productos Naturales.\u000A\u000A* Laboratorio De Fisiología.\u000A\u000A* Laboratorio De Biología Celular Y Molecular.\u000A\u000A* Laboratorio
    De Fisiología Vascular (Carlos Escudero).\u000A\u000A* Laboratorio De Ingeniería En Recursos Naturales.\u000A\u000A* Laboratorio De Análisis
    De Alimentos.\u000A\u000A* Laboratorio De Fisiología (Mg. Oscar Fuentes).\u000A\u000A* Laboratorio De Física.\u000A\u000A* Sala De Reuniones (Postgrado).\u000A\u000A* Laboratorio
    De Microbiología De Alimentos.\u000A\u000A* Mencionar, que algunos laboratorios como los de Física y Química serán usados para investigación.Para docencia será en el nuevo Departamento De Ciencias Básicas ubicado en el sector Marta Colvin.</string>
    <string name="Piso3">Oficina de profesores:\u000A\u000A* Dr. Gerardo Cabello.\u000A\u000A* Dr. Claudio Collado.\u000A\u000A* Dr. Anibal Coronel.\u000A\u000A* Patricio Cumsille.\u000A\u000A* Dr.
    Luis Fritz.\u000A\u000A* Mg. Elías Irazoqui.\u000A\u000A* Dr. Luis Lillo.\u000A\u000A* Clauido Megí.\u000A\u000A* Dr. Luis Moreno.\u000A\u000A* Dr.
    Jairo Navarrete.\u000A\u000A* Dr. Andrés Rodriguez.\u000A\u000A* Dr. Fernando Toledo.\u000A\u000A* Dr. Carlos Torres.\u000A\u000A* Mg.
    Gijsbertus Van der Veer.\u000A\u000A* Dra. Marcela Vidal. \u000A\u000A* Dr. Cristian Villavicencio.\u000A\u000A* Dr. Enrique Werner.\u000A\u000A* Si
    se desea comunicar con estos profesores, agendar citas con secretarias ubicadas en el nuevo Edificio de Investigadores.</string>
    <string name="Piso4">* Laboratorio De Genómica Y Biodiversidad (Juan Carlos Marín).</string>
    <string name="InfoDDE">La Dirección De Desarrollo Estudiantil tiene por objetivo, contribuir al crecimiento y desarollo de los y las
    estudiantes, acogiéndolos como persona desde su realidad, generando espacios de confianzam para el fortalecimiento y adquisición de
    competencias y habilidades brindando beneficios que les permita enfrentar factores de riesgo social, psicosocial, familiar y económico, para
    que su permanencia en la Universidad sea más enriquecedora y su formación personal y profesional más integral.</string>
    <string name="InfoDDE2">A continuación se presenta al grupo de trabajo encargado de brindar apoyo a los estudiantes:\u000A\u000A* Hermila Toledo (htoledo@ubiobio.cl): Jefa Departamento.\u000A\u000A* Carolina Saldias (csaldias@ubiobio.cl): Secretaria.\u000A\u000A* Karina
    Aedo (kaedo@ubiobio.cl): Encargada TNE y BAES.\u000A\u000A* Eduardo Lorenzen (elorenzen@ubiobio.cl): Atención a las carreras de
    Ing. en Alimentos, Diseño Gráfico, Fonoaudiología, Psicología, Ing. Civil Informática y Contador Público Auditor.\u000A\u000A* Jacqueline
    Angulo Cuevas (jangulo@ubiobio.cl): Coordinadora Programa Inclusión de Estudiantes en Situación de Discapacidad(PIESDI).\u000A\u000A* Marcia
    Inostroza (minostroza@ubiobio.cl): Coordinadora Programa apoyo a Estudiantes Madres/Padres y Programa Psicosocial. Además, atiende
    a las carreras de Enfermería, Nutrición y Dietética, Pedagogía en Educación Física, Ing. en Recursos Naturales, Ing Comercial
    y Bachillerato en Ciencias Naturales.\u000A</string>
    <string name="InfoDDE3">El Departamento De Desarrollo Estudiantil, proporciona a los alumnos atención de consultas por cualquier
    problema de salud, para su resolución, orientación o derivación a especialistas, de manera de colaborar en su resolución y prevención.
    Cuenta con Atención Dental, Psicológica, en Salud Sexual, Nutricional y de Enfermería. </string>
    <string name="InfoDDE4">La atención de los Trabajadores Sociales de la DDE se realiza previa reserva de hora por intranet.\u000A\u000ALos
    horarios de atención son los siguientes:\u000A\u000A* Lunes: Atención desde las 08:30  hasta 12:15 hrs  y de 14:30 hasta 17:30 hrs.\u000A\u000A* Martes
    a Viernes: Atención desde las 08:30 hasta las 12:15 hsr.</string>
    <string name="InfoGymMultitaller">El Gimnasio Multitaller ubicado al frente de las Aulas D, cuenta con 4 salas para que los estudiantes de la Universidad
    puedan realizar deportes o actividades físicas o bien profesores dictar clases relacionadas a lo mismo. A continuación, se presentan el funcionamiento de las 4 salas:  </string>
    <string name="infoGYMGT1FM">Primera sala ubicada al llegar a la entrada del Gimnasio, la cual es una aula de clases en donde los profesores
    de la Universidad imparten sus asignaturas con el objetivo de lograr el aprendizaje en sus estudiantes.</string>
    <string name="infoSalaDeMaquinas">Ubicada al lado de la aula GT1FM, esta sala cuenta para sus estudiantes con máquinas de ejercicios para
        tonificación del abdomen, fortalecimiento de muslos y pernas, fortalecimiento de brazos y biceps, entre otras.</string>
    <string name="infoSalaHalterofilia">Sala especial para los alumnos que deseen practicar la halterofilia, deporte que consiste
        en el levantamiento de pesas, por lo que la sala provee de implementos necesarios para practicarla.</string>
    <string name="infoSalaBiciletas">Sala ubicada al final del pasillo del Gimnasio, la cual cuenta con múltiples
    bicicletas estáticas para los estudiantes de la Universidad, con la función de generar musculatura
    y resistencia en las piernas.</string>
    <string name="infoGymTaller">ubicado en el centro del Gimnasio Multitaller, esta sala está destinada para que los profesores
    puedan realizar a sus alumnos talleres o clases como Yoga, Danza, Tenis de mesa, Vida saludable, Karate, entre otros. </string>
</resources>