<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".DepartamentoDeCienciasBasicas">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/negro"
                android:textStyle="bold"
                android:text="@string/DepartamentoCienciasBasicas"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:src="@drawable/dep_ciencias_basicas"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/InfoDepCienciasBasicas"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/negro"
                android:textStyle="bold"
                android:text="piso 1"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/Piso1"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/negro"
                android:textStyle="bold"
                android:text="piso 2"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/Piso2"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/negro"
                android:textStyle="bold"
                android:text="Piso 3"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/Piso3"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/negro"
                android:textStyle="bold"
                android:text="Piso 4"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/Piso4"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/ButtonReturn"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/returnn" />




        </LinearLayout>
    </ScrollView>
</LinearLayout>