<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".GimnasioMultitaller">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/negro"
                android:textStyle="bold"
                android:text="@string/GYMMultitaller"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:src="@drawable/gym_multitaller"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/InfoGymMultitaller"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/negro"
                android:textStyle="bold"
                android:text="Sala GT1FM"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/infoGYMGT1FM"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/negro"
                android:textStyle="bold"
                android:text="Sala De Máquinas"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/infoSalaDeMaquinas"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/negro"
                android:textStyle="bold"
                android:text="Gimnasio Taller"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:src="@drawable/multitaller"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/infoGymTaller"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/negro"
                android:textStyle="bold"
                android:text="Sala Para Halterofilia"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/infoSalaHalterofilia"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/negro"
                android:textStyle="bold"
                android:text="Sala De Bicicletas"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/infoSalaBiciletas"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <Button
                android:id="@+id/ButtonReturn"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/returnn" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>