<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdministracionCentral">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:textColor="@color/negro"
                android:text="@string/AdminCentral"/>
            <ImageView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:src="@drawable/casa"
                android:layout_height="match_parent" />

            <com.borjabravo.readmoretextview.ReadMoreTextView
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:trimExpandedText="Mostrar Mas"
                app:trimCollapsedText="Mostrar Menos"
                app:trimLength="50"
                app:trimMode="trimModeLength"
                app:colorClickableText="@color/azul"
                android:text="@string/CasaCentralInfo1"
                android:layout_height="wrap_content"/>
            <com.borjabravo.readmoretextview.ReadMoreTextView
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:trimExpandedText="Mostrar más"
                app:trimCollapsedText="Mostrar menos"
                app:trimLength="89"
                app:trimMode="trimModeLength"
                app:colorClickableText="@color/azul"
                android:text="@string/CasaCentralInfo2"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/ButtonReturn"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/returnn" />




        </LinearLayout>
    </ScrollView>
</LinearLayout>